# volo

speech2text/speech2text/: pyproject.toml
speech2text/speech2text/speech2text/: main.py
